--- a/assets/css/clinica.css
+++ b/assets/css/clinica.css
@@ -86,6 +86,7 @@ input::placeholder{
 .input-imagem{
     display: none;
     outline: none;
+
 }
 
 .div-button{
@@ -104,4 +105,13 @@ label{
     display: flex;
     align-items: center;
     justify-content: center
+}
+
+@media (min-width:0px) and  (max-width:992px){
+    .div-formulario{
+        
+        width: 100%;
+        height:100%;
+        gap: 20px;
+    }
 }
