--- a/assets/css/endereco.css
+++ b/assets/css/endereco.css
@@ -62,6 +62,8 @@ body{
     background-color: transparent;
     margin: 20px;
     outline: none;
+    color: var(--secundary-color);
+
 
 }
 .div-inputs input::placeholder{
