--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,6 +434,7 @@ main{
 }
 
 /* section about*/
+
 .section-about{
     background-color: var(--primary-color);
     border-radius: var(--card-radius);
@@ -495,7 +496,7 @@ footer .div-email p a{
 }
 
 /*------------------RESPONSIVIDADE------------------*/
-@media (max-width: 540px){
+@media (max-width: 768px){
     
  
             /* header mobile */
@@ -657,9 +658,11 @@ footer .div-email p a{
         margin-left: 5px;
 
        }
+
        .div-buttons .div-button a{
         font-size: 10px;
        }
+
        .div-buttons .div-button select{
         width: 100%;
         height: 100%;
@@ -781,9 +784,228 @@ footer .div-email p a{
         }
 }
 
-@media (max-width: 450px){
-    .div-linhas .div-linha{
-        width: 100px;
+        @media (max-width: 450px){
+            /* slogamn */
+
+            .section-slogan{
+                width: 250px;
+        }
+            .div-linhas .div-linha{
+                width: 100px;
+            }
+        }
+@media (max-width: 350px){
+
+  
+        .div-linhas .div-linha{
+            width: 70px;
+        }
+      .div-buttons .div-button{
+        width: 70px;
+        height: 27px;
+        margin-right: 5px;
+        margin-left: 5px;
+
+       }
+
+       .div-buttons .div-button a{
+        font-size: 8px;
+       }
+       
+          /* card */
+          .card-container{
+    
+            width: 230px;
+            height: 380px;
+            background-color: #fff;
+            border-radius: 6px;
+            box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
+            margin: 30px;
+        
+        }
+        /* Rodapé */
+        footer img{
+            width: 40px;
+        }
+
+}
+@media (min-width:768px) and  (max-width:992px){
+    
+/* header mobile */
+.container-menu{
+justify-content: space-between;
+}
+.container-menu .logo img{
+    width: 70px;
+    margin-left: 20px;
+}
+
+    .menu{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100vw;
+    top: 70px;
+    right: 0px;
+    background-color: var(--primary-color);
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow:hidden;
     }
+
+    #nav.active .menu{
+    height: 100vh;
+    visibility: visible;
+    overflow-y:auto;
+
+}
+#nav.active .menu li{
+    margin-top: 40px;
+}
+.menu li a{
+    padding: 1rem 0;
+}
+#nav.active .menu li a:hover{
+    color: crimson;
+
+}
+
+#btn-mobile{
+        display: flex;
+        padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    background-color: var(--secundary-color);
+    margin-right: 30px;
+
+}
+.hamburger{
+    border-top:2px solid var(--primary-color);
+    width: 20px;
+}
+
+.hamburger::after,.hamburger::before{
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: var(--primary-color);
+    margin-top: 5px;
+    position: relative;
+    }
+
+    #nav.active .hamburger{
+    border-top-color: transparent;
+}
+#nav.active .hamburger::before{
+    transform: rotate(135deg);
+}
+
+        #nav.active .hamburger::after{
+    transform: rotate(-135deg);
+    top: -7px;
+}
+
+    /* button de login */
+
+    .button-entrar{
+        width: 80px;
+        height: 30px;
+        margin-left: 15px;
+        margin-top: 30px;
+    }
+    .button-entrar a{
+        
+        font-size: 12px;
+        
+        }
+
+        /* section slogan */
+    
+    .section-slogan{
+        width: 450px;
+        height: 308px;
+    }
+    .div-slogan{
+        margin-left: 20px;
+    }
+    .div-slogan h1{
+        margin-top: 30px;
+        text-align: center;
+        font-size: 25px;
+        padding: 10px;
+    }
+    .div-slogan p{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    
+    .img-slogan img{
+        width: 180px;
+        height: 180px;
+        margin-right: 0px;
+        padding: 10px;
+    }
+    /* button search */
+    .input-search{
+    
+        width: 350px;
+        height: 80px;
+        border-radius: 17px;
+        
+    }
+    .div-search input{
+        width: 230px;
+        height: 35px;
+        background-color: #eeeeee;
+        border-radius: 8px;
+        
+    }
+    
+    .button-search{
+        width: 90px;
+        height: 30px;
+        
+    }
+        
+    .button-search a{
+        
+        font-size: 17px;
+    
+    }
+    .div-search input::placeholder{
+        font-size: 10px;
+    }
+
+    /* filtros  */
+
+    .div-buttons .div-button{
+    width: 150px;
+    height: 35px;
+    margin-right: 5px;
+    margin-left: 5px;
+
+    }
+
+    .div-buttons .div-button a{
+    font-size: 10px;
+    }
+
+    .div-buttons .div-button select{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--button-radius);
+    background-color: var(--primary-color);
+    color: var(--secundary-color);
+    
+    }
+    .card-container{
+    width: 700px;
+    }
+    .div-linhas .div-linha{
+    width: 200px;
+}
 }
 
