--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -13,6 +13,10 @@
     font-family: 'ropa sans', serif,Arial, Helvetica, sans-serif;
 
 }
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+
+  }
 body{
     background-color: #eeeeee;
     
