--- a/assets/css/VerMais.css
+++ b/assets/css/VerMais.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap');
-
 :root{
   --primary-color: #00285f;
   --secundary-color:#f9f9f1;
@@ -15,7 +13,7 @@ html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'ropa sans', serif,Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', sem serifa;
 
 }
 body{
@@ -176,6 +174,8 @@ main{
     box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
     margin-bottom: 200px;
     margin-top: 50px;
+    border-radius: 6px;
+
 
 }
 .card-container:hover , .card-container:hover .button{
@@ -317,6 +317,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100px;
     height: 100px;
     background-color:  var(--primary-color);
@@ -326,22 +327,22 @@ main{
     border-radius: 15px;
 
 }
-.dia summary{
+.dia h1{
     position: relative;
     text-align: center;
-    top: 5px;
 }
 .dia p{
     position: relative;
     display: flex;
     justify-content: center;
-    top: 20px;
+    top: 10px;
     font-size: 14px;
 }
 .dia:hover{
     mix-blend-mode: hard-light;
     opacity: 100%;
     cursor: pointer;
+    
 }
  /* sobre */
 .sobre-nos{
@@ -372,7 +373,6 @@ main{
     padding: 20px;
 }
 .div-sobre-texto p{
-    margin-bottom: 90px;
     text-align: justify;
     font-size: 25px;
 
@@ -414,7 +414,9 @@ main{
   .card:hover .card-icon{
     transform: scale(1.3);
   }
-
+ .card h4{
+    margin-bottom: 10px;
+ }
   .card p{
     margin-top: 25px;
     font-weight: 500;
@@ -534,10 +536,10 @@ footer .div-email p{
     #btn-mobile{
          display: flex;
          padding: 0.5rem 1rem;
-        font-size: 1rem;
-        cursor: pointer;
-        background-color: var(--secundary-color);
-        margin-right: 30px;
+         font-size: 1rem;
+         cursor: pointer;
+         background-color: var(--secundary-color);
+         margin-right: 30px;
  
     }
     .hamburger{
@@ -715,9 +717,7 @@ footer .div-email p{
             height: 70px;
 
         }
-        .dia summary{
-            font-size: 9px;
-        }
+       
         .dia p{
             font-size: 9px;
         }
