--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -10,7 +10,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'ropa sans', serif,Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', sem serifa;
 
 }
 html {
