--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap');
 
 :root{
   --primary-color: #00285f;
@@ -16,7 +15,7 @@ html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'ropa sans', serif,Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', sem serifa;
 
 }
 body{
@@ -250,13 +249,13 @@ main{
     flex-wrap: wrap;
 }
 .card-container{
-    
     width: 900px;
     height: 450px;
     background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 1px 5px 1px rgba(0,0,0,.3);
     margin: 40px;
+    border-radius: 6px;
 
 }
 .card-container:hover , .card-container:hover .button{
