--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -29,7 +29,7 @@ body{
     align-items: center;
     width: 100%;
     height: 6rem;
-    background-color: #00285f;
+    background-color: var(--primary-color);
     z-index: 1000;
 }
  /* button de login */
@@ -90,7 +90,7 @@ main{
     margin-top: 130px;
     font-size: 35px;
 }
-.section-titulo h2 , p{
+.section-titulo h2 , .section-titulo p{
     text-align: justify;
     margin-top: 20px;
     margin-left: 10px;
@@ -141,27 +141,93 @@ main{
 
 /* rodapé */
 
-footer{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
+.footer-distributed{
+	background: var(--primary-color);
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	padding: 55px 50px;
 }
 
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align:middle
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 40%;
+
+}
+.footer-distributed .footer-left p{
+ color: var(--secundary-color);
+    
+}
+
+/*  logo */
+
+.footer-distributed h3{
+	color:  var(--secundary-color);
+    margin-bottom: 5px;
+}
+
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  var(--secundary-color);
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+
+
+.footer-distributed .footer-center p a{
+	color:  lightseagreen;
+	text-decoration: none;;
+}
+
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 23%;
+}
+
+.footer-distributed .footer-right p{
+	color: white;
+    margin-top: 20px;
+
+}
 
 footer img{
     width: 100px;
     margin-right: 25px;
     margin-left: 25px;
 }
-
-footer .div-email p a{
-    color: var(--secundary-color);
-    text-decoration: none;
-}
+ 
 #btn-mobile{
     display: none;
 
@@ -265,20 +331,21 @@ footer .div-email p a{
         
         }
         /* Rodapé */
-        footer img{
-            width: 70px;
+       
+    
+        .footer-distributed .footer-left,
+        .footer-distributed .footer-center,
+        .footer-distributed .footer-right{
+            display: block;
+            width: 100%;
+            margin-bottom: 40px;
+            text-align: center;
         }
-
-        footer .div-email p{
-            font-size: 10px;
-        }
+      
         }
 
         @media (max-width: 355px){
-            /* Rodapé */
-            footer img{
-                width: 40px;
-            }
+           
            
         .div-info{
             width: 90%;
