update mapa e footer

--- a/assets/css/VerMais.css
+++ b/assets/css/VerMais.css
@@ -481,6 +481,7 @@ main{
     margin-bottom: 40px;
     border: 1px solid var(--primary-color);
     border-radius: 10px;
+    z-index: 0;
 }
 
 /* Rodapé */
