--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,12 @@ main{
     color: var(--secundary-color);
 
 }
+.card-container:hover .button .div-ver-mais .div-button-ver-mais,.card-container:hover .button .div-ver-mais .div-button-ver-mais a{
+    background-color: var(--secundary-color);
+    color: var(--primary-color);
+    border-radius: var(--button-radius);
+
+}
 .top{
     height: 100px;
     border-radius: 6px;
@@ -481,7 +487,6 @@ main{
 .footer-distributed .footer-links a{
 	display:inline-block;
 	line-height: 1.8;
-	text-decoration: none;
 	color:  inherit;
 }
 
@@ -608,257 +613,256 @@ footer img{
         top: -7px;
     }
 
-     /* button de login */
+    /* button de login */
 
-        .button-entrar{
-            width: 80px;
-            height: 30px;
-            margin-left: 15px;
-            margin-top: 30px;
-        }
-        .button-entrar a{
-            
-           font-size: 12px;
-            
-            }
-
-           /* section slogan */
-     
-       .section-slogan{
-            flex-direction: column;
-            width: 300px;
-            height: 310px;
-            position: relative;
-
-       }
-       .div-slogan{
-            margin-left: 0px;
-            margin-bottom: 0px;
-       }
-       .div-slogan h1{
-            margin-top: 30px;
-            text-align: center;
-            font-size: 25px;
-            padding: 10px;
-       }
-       .div-slogan p{
-            text-align: center;
-            font-size: 20px;
-            margin-top: 10px;
-       }
-       
-       .img-slogan img{
-            width: 180px;
-            height: 180px;
-            margin-right: 0px;
-            padding: 10px;
-            margin-bottom: 15px;
-       }
-        /* button search */
-        .input-search{
-       
-            width: 280px;
-            height: 60px;
-            border-radius: 17px;
-           
-        }
-        .div-search input{
-            width: 180px;
-            height: 30px;
-            background-color: #eeeeee;
-            border-radius: 8px;
-          
-        }
-       
-        .button-search{
-            width: 70px;
-            height: 30px;
-            
-        }
-         
-        .button-search a{
-            
-            font-size: 15px;
+    .button-entrar{
+        width: 80px;
+        height: 30px;
+        margin-left: 15px;
+        margin-top: 30px;
+    }
+    .button-entrar a{
+        
+        font-size: 12px;
         
         }
-        .div-search input::placeholder{
-            font-size: 10px;
-        }
 
-        /* filtros  */
+        /* section slogan */
+    
+    .section-slogan{
+        flex-direction: column;
+        width: 300px;
+        height: 310px;
+        position: relative;
 
-      .div-buttons .div-button{
-        width: 105px;
-        height: 27px;
-        margin-right: 5px;
-        margin-left: 5px;
-
-       }
-
-       .div-buttons .div-button a{
+    }
+    .div-slogan{
+        margin-left: 0px;
+        margin-bottom: 0px;
+    }
+    .div-slogan h1{
+        margin-top: 30px;
+        text-align: center;
+        font-size: 25px;
+        padding: 10px;
+    }
+    .div-slogan p{
+        text-align: center;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    
+    .img-slogan img{
+        width: 180px;
+        height: 180px;
+        margin-right: 0px;
+        padding: 10px;
+        margin-bottom: 15px;
+    }
+    /* button search */
+    .input-search{
+    
+        width: 280px;
+        height: 60px;
+        border-radius: 17px;
+        
+    }
+    .div-search input{
+        width: 180px;
+        height: 30px;
+        background-color: #eeeeee;
+        border-radius: 8px;
+        
+    }
+    
+    .button-search{
+        width: 70px;
+        height: 30px;
+        
+    }
+        
+    .button-search a{
+        
+        font-size: 15px;
+    
+    }
+    .div-search input::placeholder{
         font-size: 10px;
-       }
+    }
 
-       .div-buttons .div-button select{
+    /* filtros  */
+
+    .div-buttons .div-button{
+    width: 105px;
+    height: 27px;
+    margin-right: 5px;
+    margin-left: 5px;
+
+    }
+
+    .div-buttons .div-button a{
+    font-size: 10px;
+    }
+
+    .div-buttons .div-button select{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--button-radius);
+    background-color: var(--primary-color);
+    color: var(--secundary-color);
+
+    
+    }
+    
+    /* catálogo*/
+
+    .div-catalogo h2{
+        font-size: 13px;
+        margin-top: -3px;
+    }
+    
+    .div-linhas .div-linha{
+        width: 140px;
+        height: 1px;
+    }
+    
+    
+    /* card */
+    .card-container{
+
+        width: 300px;
+        height: 380px;
+        background-color: #fff;
+        border-radius: 6px;
+        box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
+        margin: 30px;
+    
+    }
+        /* nome */
+    .button h3{
+        font-size: 15px;
+        margin-bottom: 40px;
+        margin-top: 30px;
+    }
+        /* endereço e horario */
+
+    .button{
+        background-color: #fff;
+        padding: 20px;
+        padding-top: 60px;
+        text-align: center;
+}
+    .button .btn-margin{
+            margin-top: -40px;
+            
+}
+    .button p{
+            margin: 35px;
+            font-size: 14px;
+
+}
+    /* imagem*/
+    .image-container{
+        width: 100px;
+        height: 100px;
+        margin-top: 20px;
+
+}
+    .top{
+        height: 60px;
+                
+
+}
+        /* button ver mais */
+    
+    .div-ver-mais .div-button-ver-mais{   
+        width: 120px;
+        height: 25px;
+
+}
+
+    .div-ver-mais .div-button-ver-mais a {
+        font-size: 15px;
+}
+    /* buttons do catalógo*/
+    .div-buttons-catalogo .buuton-prox-ant{
+        width: 73px;
+        height: 24px;
+
+    }
+    .div-buttons-catalogo .buuton-prox-ant a{
+        font-size: 12px
+    }
+    .div-buttons-catalogo .button-catalogo {
+        width: 28px;
+        height: 24px;
+    }
+
+
+    /* Rodapé */
+    
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right{
+        display: block;
         width: 100%;
-        height: 100%;
-        border-radius: var(--button-radius);
-        background-color: var(--primary-color);
-        color: var(--secundary-color);
-
-        
-       }
-       
-        /* catálogo*/
-
-        .div-catalogo h2{
-            font-size: 13px;
-            margin-top: -3px;
-        }
-       
-        .div-linhas .div-linha{
-            width: 140px;
-            height: 1px;
-        }
-       
-        
-        /* card */
-        .card-container{
-    
-            width: 300px;
-            height: 380px;
-            background-color: #fff;
-            border-radius: 6px;
-            box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-            margin: 30px;
-        
-        }
-         /* nome */
-       .button h3{
-            font-size: 15px;
-            margin-bottom: 40px;
-            margin-top: 30px;
-        }
-            /* endereço e horario */
-
-       .button{
-            background-color: #fff;
-            padding: 20px;
-            padding-top: 60px;
-            text-align: center;
+        margin-bottom: 100px;
+        text-align: center;
     }
-        .button .btn-margin{
-             margin-top: -40px;
-             
-    }
-        .button p{
-             margin: 35px;
-             font-size: 14px;
-    
-    }
-        /* imagem*/
-        .image-container{
-            width: 100px;
-            height: 100px;
-            margin-top: 20px;
 
-}
-        .top{
-            height: 60px;
-   
-
-}
-         /* button ver mais */
-        
-        .div-ver-mais .div-button-ver-mais{   
-            width: 120px;
-            height: 25px;
-
-}
-
-        .div-ver-mais .div-button-ver-mais a {
-            font-size: 15px;
-}
-        /* buttons do catalógo*/
-        .div-buttons-catalogo .buuton-prox-ant{
-            width: 73px;
-            height: 24px;
-
-        }
-        .div-buttons-catalogo .buuton-prox-ant a{
-            font-size: 12px
-        }
-        .div-buttons-catalogo .button-catalogo {
-            width: 28px;
-            height: 24px;
-        }
-
-
-        /* Rodapé */
-        
-        .footer-distributed .footer-left,
-        .footer-distributed .footer-center,
-        .footer-distributed .footer-right{
-            display: block;
-            width: 100%;
-            margin-bottom: 40px;
-            text-align: center;
-        }
-    
 }
 
 @media (max-width: 450px){
-    /* slogan */
+/* slogan */
 
-    
-    .div-linhas .div-linha{
-        width: 100px;
-    }
+
+.div-linhas .div-linha{
+    width: 100px;
+}
 }
 @media (max-width: 350px){
-        .section-slogan{
-             width: 250px;
-            }
-  
-        .div-linhas .div-linha{
-            width: 70px;
+    .section-slogan{
+            width: 250px;
         }
-      .div-buttons .div-button{
+
+    .div-linhas .div-linha{
         width: 70px;
-        height: 27px;
-        margin-right: 5px;
-        margin-left: 5px;
+    }
+    .div-buttons .div-button{
+    width: 70px;
+    height: 27px;
+    margin-right: 5px;
+    margin-left: 5px;
 
-       }
+    }
 
-       .div-buttons .div-button a{
-        font-size: 8px;
-       }
-       
-          /* card */
-          .card-container{
+    .div-buttons .div-button a{
+    font-size: 8px;
+    }
     
-            width: 230px;
-            height: 380px;
-            background-color: #fff;
-            border-radius: 6px;
-            box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-            margin: 30px;
-        
-        }
-      
+    /* card */
+    .card-container{
 
+    width: 230px;
+    height: 380px;
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
+    margin: 30px;
+
+}
+    
 }
 @media (min-width:768px) and  (max-width:992px){
     
 /* header mobile */
-.container-menu{
-justify-content: space-between;
-}
-.container-menu .logo img{
-    width: 70px;
-    margin-left: 20px;
-}
+    .container-menu{
+    justify-content: space-between;
+    }
+    .container-menu .logo img{
+        width: 70px;
+        margin-left: 20px;
+    }
 
     .menu{
     display: flex;
@@ -880,52 +884,52 @@ justify-content: space-between;
     overflow-y:auto;
 
 }
-#nav.active .menu li{
-    margin-top: 40px;
-}
-.menu li a{
-    padding: 1rem 0;
-}
-#nav.active .menu li a:hover{
-    color: crimson;
+    #nav.active .menu li{
+        margin-top: 40px;
+    }
+    .menu li a{
+        padding: 1rem 0;
+    }
+    #nav.active .menu li a:hover{
+        color: crimson;
 
-}
-
-#btn-mobile{
-        display: flex;
-        padding: 0.5rem 1rem;
-    font-size: 1rem;
-    cursor: pointer;
-    background-color: var(--secundary-color);
-    margin-right: 30px;
-
-}
-.hamburger{
-    border-top:2px solid var(--primary-color);
-    width: 20px;
-}
-
-.hamburger::after,.hamburger::before{
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: var(--primary-color);
-    margin-top: 5px;
-    position: relative;
     }
 
-    #nav.active .hamburger{
-    border-top-color: transparent;
-}
-#nav.active .hamburger::before{
-    transform: rotate(135deg);
-}
+    #btn-mobile{
+            display: flex;
+            padding: 0.5rem 1rem;
+        font-size: 1rem;
+        cursor: pointer;
+        background-color: var(--secundary-color);
+        margin-right: 30px;
 
-        #nav.active .hamburger::after{
-    transform: rotate(-135deg);
-    top: -7px;
-}
+    }
+    .hamburger{
+        border-top:2px solid var(--primary-color);
+        width: 20px;
+    }
+
+    .hamburger::after,.hamburger::before{
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background-color: var(--primary-color);
+        margin-top: 5px;
+        position: relative;
+        }
+
+        #nav.active .hamburger{
+        border-top-color: transparent;
+    }
+    #nav.active .hamburger::before{
+        transform: rotate(135deg);
+    }
+
+            #nav.active .hamburger::after{
+        transform: rotate(-135deg);
+        top: -7px;
+    }
 
     /* button de login */
 
