--- a/assets/css/painelAdministrativo.css
+++ b/assets/css/painelAdministrativo.css
@@ -394,14 +394,17 @@ input, button, select {
     overflow: auto;
 }
 
-
+.section-card{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .card-container{
     width: 900px;
     height: 450px;
     background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 5px 5px 1px rgba(0,0,0,.3);
-    margin: 40px;
     border-radius: 6px;
 
 }
