--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -76,9 +76,18 @@ body{
     height: 30px;
     border-radius: var(--button-radius);
     background-color: var(--secundary-color);
-    color: black;
 }
 
+.div-button button a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: black;
+    text-decoration: none;
+
+}
 .div-button button:hover{
     mix-blend-mode: hard-light;
     opacity: 100%;
